test-suite/failure/evarlemma.v
(* Check success of inference of evars in the context of lemmas *)

Fail Lemma foo x : True.
